--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express",
   "dependencies": {
+    "body-parser": "^2.2.1",
     "ejs": "^3.1.10",
     "express": "5.1.0",
     "mongodb": "^7.0.0"
